openshift-configs/data-science-project.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elyra-demo-project
  labels:
    opendatahub.io/dashboard: "true"
    modelmesh-enabled: "true"
    name: elyra-demo-project
  annotations:
    openshift.io/description: "Elyra MLOps Demo Project"
    openshift.io/display-name: "Elyra Demo"
