openshift-configs/jupyter-elyra-setup.yaml
apiVersion: v1
kind: Service
metadata:
  name: elyra-demo-notebook
  namespace: elyra-demo-project
  labels:
    app: elyra-demo-notebook
spec:
  ports:
  - name: notebook-port
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: elyra-demo-notebook
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elyra-demo-notebook
  namespace: elyra-demo-project
  annotations:
    openshift.io/host.generated: "true"
    haproxy.router.openshift.io/timeout: 600s
spec:
  port:
    targetPort: notebook-port
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: elyra-demo-notebook
    weight: 100
  wildcardPolicy: None
